<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="quantity">quantity</string>
    <string name="action_save">Save</string>
    <string name="product">Product</string>
    <string name="supplier">Supplier</string>
    <string name="addedProduct">New Product has been saved</string>
    <string name="error">Error with saving Product</string>

</resources>
